--- a/app/assets/stylesheets/framework/components/_section.scss
+++ b/app/assets/stylesheets/framework/components/_section.scss
@@ -2,7 +2,7 @@
   @include clearNav(sm);
 
   height: $section-height;
-  padding: $section-padding;
+  padding: $section-padding-top $section-padding-right $section-padding-bottom $section-padding-left;
   width: $section-width;
 
   @each $size in $screen-sizes {
