try moving application css to bottom of body as well

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
     %title
       = content_for?(:title) ? "#{yield(:title)} | Big Corp." : "Big Corporation"
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    -# place scripts here
     = favicon_link_tag 'favicon.ico'
     = csrf_meta_tags
 
@@ -17,5 +17,6 @@
 
     = render partial: "framework/buttons/hamburger", locals: { mobile_only: true }
 
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = javascript_include_tag "vendor/modernizr"
