--- a/app/views/framework/buttons/_hamburger.html.haml
+++ b/app/views/framework/buttons/_hamburger.html.haml
@@ -1,4 +1,4 @@
 - mobile_only ||= false
 
-= button_tag(class: "btn btn-nav btn-square btn-topRight btn-margin #{'hide-lgUp' if mobile_only}", data: { behavior: "toggle-menu" }) do
+= button_tag(class: "btn btn-square btn-topRight btn-margin #{'hide-lgUp' if mobile_only}", data: { behavior: "toggle-menu" }) do
   .btn-hamburger
