--- a/app/assets/stylesheets/framework/components/_header.scss
+++ b/app/assets/stylesheets/framework/components/_header.scss
@@ -1,12 +1,18 @@
-header {
-  height: 100%;
+.header {
+  height: auto;
   left: 0;
   overflow-y: visible;
   position: fixed;
   top: 0;
   width: 100%;
 
+  &-active {
+    display: block;
+    height: 100%;
+  }
+
   @media #{$lg-up} {
+    height: 100%;
     width: auto;
   }
 }
