--- a/app/assets/stylesheets/framework/mixins/_standards.scss
+++ b/app/assets/stylesheets/framework/mixins/_standards.scss
@@ -1,23 +1,3 @@
-/// Returns a set of base styles for all navbars
-///
-
-// @mixin navBase(
-// ) {
-//   &-full {
-//     &Bottom { width: 100%; }
-//     &Left { height: 100%; }
-//     &Right { height: 100%; }
-//     &Top { width: 100%; }
-//   }
-
-//   &-clear {
-//     &Bottom { height: 100%; }
-//     &Left { width: 100%; }
-//     &Right { width: 100%; }
-//     &Top { height: 100%; }
-//   }
-// }
-
 /// Returns a set of classes to set the correct window area based on navbar position
 ///
 /// @param {String} $viewport [null]
@@ -84,6 +64,40 @@
 
   &-colorWhite {
     color: $white;
+  }
+}
+
+/// Returns a standardized set of border classes for a given parent class
+///
+/// @param {Number} $border-width [$base-border-width]
+/// A number representing the desired width of the borders
+///
+
+@mixin stdBorder(
+  $border-width: $base-border-width
+) {
+  &-borderTransparent {
+    border: $border-width solid transparent;
+  }
+
+  &-borderPrimary {
+    border: $border-width solid $color-primary;
+  }
+
+  &-borderSecondary {
+    border: $border-width solid $color-secondary;
+  }
+
+  &-borderTertiary {
+    border: $border-width solid $color-tertiary;
+  }
+
+  &-borderBlack {
+    border: $border-width solid $black;
+  }
+
+  &-borderWhite {
+    border: $border-width solid $white;
   }
 }
 
