--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,6 @@
 = render partial: "shared/menu"
 
-= button_tag(class: "btn btn-nav btn-large btn-logo", id: "brand-logo") do
+= button_tag(class: "btn btn-large btn-logo", id: "brand-logo") do
   BIG
   %br
   CORP.
