--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -24,8 +24,7 @@
           %span{ itemprop: 'addressRegion' } IL, 
           %span{ itemprop: 'postalCode' } 60606
         %p.contact
-          %span{ itemprop: 'telephone' } (847) 942-1853
           %br
-          %span{ itemprop: 'email' } chris@bigcorp.io
-        %p.copyright
-          Copyright © 2016
+          %span{ itemprop: 'email' } info@bigcorp.io
+        / %p.copyright
+        /   Copyright © 2016
