--- a/app/assets/stylesheets/framework/mixins/_typography.scss
+++ b/app/assets/stylesheets/framework/mixins/_typography.scss
@@ -12,6 +12,7 @@
 
   font-weight: map-get($font-weights, $selector);
   margin: map-get($type-margins, $selector);
+  letter-spacing: map-get($letter-spacings, $selector);
 }
 
 /// Returns responsive CSS settings for any typography selector
