--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
       = content_for?(:title) ? "#{yield(:title)} | Big Corp." : "Big Corporation"
     -# place scripts here
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = favicon_link_tag 'favicon.ico'
+    = favicon_link_tag 'favicon.png'
     = csrf_meta_tags
 
   %body
