--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,4 @@
 = render partial: "shared/menu"
 
 = button_tag(class: "btn btn-large btn-logo", id: "brand-logo") do
-  = inline_svg 'bwo.svg'
+  = inline_svg 'bwoText.svg'
