--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -4,11 +4,11 @@
   width: 100%;
 
   canvas {
-    background-color: white;
+    // background: white image-url('SkylineBlack2.jpg') 50% 20%/cover;
     left: 0;
     position: absolute;
     top: 0;
-    z-index: -1;
+    z-index: 0;
   }
 
   .content {
