--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -16,7 +16,7 @@
     .company-info
       .company-card{ itemscope: true, itemtype: 'http://schema.org/Organization' }
         %p.title{ itemprop: 'name' }
-          Big Corporation Digital
+          Big Corporation
         %p.address{ :itemprop => 'address', itemscope: true, itemtype: 'http://schema.org/PostalAddress' }
           %span{ itemprop: 'streetAddress' } 300 N Canal Street
           %br
