--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,3 +1,5 @@
+$header-padding: $base-spacing;
+
 .header {
 
   .btn {
@@ -30,7 +32,7 @@
       .nav-links {
         background-color: transparent;
         list-style-type: none;
-        padding: 0 $base-spacing;
+        padding: 0 $header-padding;
         position: absolute;
         text-align: right;
         top: 50%;
@@ -42,7 +44,7 @@
 
           font-weight: $font-weight-normal;
           letter-spacing: 5px;
-          margin: $base-spacing 0;
+          margin: $header-padding 0;
           text-decoration: none;
           text-transform: uppercase;
 
@@ -55,18 +57,6 @@
             position: relative;
             text-decoration: none;
             transition: all $transition-time * 2;
-
-            &:after {
-              background-color: $gray;
-              content: '';
-              height: 100%;
-              left: 100px;
-              opacity: 0;
-              position: absolute;
-              top: 0;
-              transition: all $transition-time * 2;
-              width: 3px;
-            }
 
             &:before {
               background-color: $gray;
@@ -89,17 +79,10 @@
               }
             }
 
-
             &.active {
               background-color: $theme-blue;
               color: $white;
               padding-right: 2rem;
-
-              &:after {
-                background-color: $theme-blue;
-                left: -9px;
-                opacity: 1;
-              }
             }
           }
         }
@@ -107,30 +90,38 @@
     }
 
     .company-info {
-      $font-size: scale-font(map-get($font-sizes, small), sm);
+      $font-size-major: scale-font(map-get($font-sizes, p), sm);
+      $font-size-minor: scale-font(map-get($font-sizes, small), sm);
 
       background-color: white;
       bottom: $base-padding;
       left: 0;
+      @include rem(padding, 0 $header-padding);
       position: absolute;
       width: 100%;
 
       .company-card {
         height: 100%;
-        text-align: center;
+        text-align: left;
         width: 100%;
 
         p {
-          @include rem(font-size, $font-size);
-          font-weight: $font-weight-lighter;
-          line-height: 1.5;
+          @include rem(font-size, $font-size-minor);
+          font-weight: lighter;
+          line-height: 1.8;
 
-          &:first-child {
-            margin-top: 0;
+          span {
+            font-weight: normal;
           }
 
-          &:last-child {
-            margin-bottom: 0;
+          &.title {
+            @include rem(font-size, $font-size-major);
+            // font-style: italic;
+            text-transform: uppercase;
+
+            span {
+              font-weight: bold;
+            }
           }
         }
       }
@@ -150,7 +141,7 @@
 
           @if $modifier == lg {
             margin: 0;
-            padding: $base-spacing;
+            @include rem(padding, $header-padding);
             width: 100%;
           }
         }
